Added block nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,49 @@
 .nav-container {
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
 }
 .nav-container ul {
-    margin: 0;
-    padding: 0;
-    margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  margin: 0 auto;
 }
 .nav-container li {
-  display: inline-block;
   width: 100%;
   background-color: aqua;
   text-align: center;
+  box-sizing: content-box;
   
-  
+  list-style: none;
 }
 
-@media screen and (min-width: 800px){
-    .nav-container li{
-        width: 20%;
-    }
+.nav-container li a {
+  display: block;
+  padding: 1.4em 0;
+}
+
+.nav-container li a:hover{
+    background-color: azure;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-container li {
+    margin-right: 4.2em;
+    width: 20%;
+    padding: 0;
+    display: block;
+    position: relative;
+    float: left;
+    background-color: transparent;
+  }
+  .nav-container li a {
+    display: block;
+    padding: 0.8em 0;
+  }
+  .nav-container ul {
+    overflow: hidden;
+    margin: 0 auto;
+    background-color: aqua;
+  }
+  
+
 }
