--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+.content {
+  width: 90%;
+  margin: 0 auto;
+}
+
+/*rules BELOW are all for nav*/
 .nav-container {
   width: 90%;
   margin: 0 auto;
@@ -12,28 +18,37 @@
   background-color: aqua;
   text-align: center;
   box-sizing: content-box;
-  
+  margin-bottom: 5%;
   list-style: none;
 }
 
 .nav-container li a {
   display: block;
-  padding: 1.4em 0;
+  padding: 0.8em 0;
 }
 
-.nav-container li a:hover{
-    background-color: azure;
+.nav-container li a:hover {
+  background-color: azure;
+}
+
+h1 {
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  margin: 2em 0 3em ;
 }
 
 @media screen and (min-width: 800px) {
+  .nav-container {
+    width: 100%;
+  }
   .nav-container li {
-    margin-right: 4.2em;
-    width: 20%;
+    width: 15%;
     padding: 0;
     display: block;
     position: relative;
     float: left;
     background-color: transparent;
+    margin-bottom: 0;
   }
   .nav-container li a {
     display: block;
@@ -44,6 +59,20 @@
     margin: 0 auto;
     background-color: aqua;
   }
-  
 
+  .nav-container li:nth-child(3) {
+    float: right;
+  }
+  .nav-container li:nth-child(2) {
+    margin-right: 17%;
+    margin-left: 17%;
+  }
+  .nav-container li:nth-child(1) {
+    margin-left: 10%;
+  }
+  .nav-container li:nth-child(3) {
+    margin-right: 10%;
+  }
 }
+
+/**rules ABOVE are for nav bar**/
