--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,15 @@
   margin: 0 auto;
 }
 
+.video-content{
+  width: 60%;
+}
+
+.bleach {
+  width: 85%;
+  margin: 0 auto;
+}
+
 /*rules BELOW are all for nav*/
 .nav-container {
   width: 90%;
@@ -34,7 +43,7 @@
 h1 {
   font-family: "Courier New", Courier, monospace;
   text-align: center;
-  margin: 2em 0 3em ;
+  margin: 2em 0 3em;
 }
 
 @media screen and (min-width: 800px) {
@@ -72,6 +81,18 @@ h1 {
   }
   .nav-container li:nth-child(3) {
     margin-right: 10%;
+  }
+  .container-content{
+    width: 20%;
+    float: right;
+  }
+
+  .video-content{
+    float: left;
+  }
+
+  .one-piece{
+    clear: both;
   }
 }
 
