Added last food layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body{
+  background-color: bisque;
+}
 .content {
   width: 90%;
   margin: 0 auto;
@@ -113,48 +116,64 @@ h1 {
     text-align: center;
   }
 
-  .page-content{
+  .page-content {
     width: 1200px;
     margin: 0 auto;
   }
 
-  .dosa-info{
+  .dosa-info {
     background-color: darkgray;
   }
 
-  h3{
+  h3 {
     text-align: center;
     padding: 10px;
   }
 
-  .dosa-info img , .samosa-info img, .dates-info img{
+  .dosa-info img,
+  .samosa-info img,
+  .dates-info img {
     margin: 20px;
     border-radius: 20px;
     height: 360px;
     width: 539px;
   }
 
-  .dosa-food-content{
+  .dosa-food-content {
     position: absolute;
     width: 400px;
-    left:800px;
+    left: 800px;
     bottom: 170px;
   }
-  .samosa-info{
+  .samosa-info {
     background-color: aqua;
   }
 
-  .samosa-info img{
+  .samosa-info img {
     position: relative;
     left: 600px;
   }
-  .samosa-info{
+  .samosa-info {
     position: relative;
   }
-  .samosa-food-content{
+  .samosa-food-content {
     position: absolute;
     left: 50px;
-    bottom:100px;
+    bottom: 100px;
+  }
+
+  .dates-info {
+    background-color: lightgreen;
+  }
+
+  .dates-info{
+    position: relative;
+    
+  }
+
+  .dates-food-content{
+    position: relative;
+    bottom: 250px; 
+    left: 680px;
   }
 }
-
