--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,15 @@ body {
   width: 90%;
   margin: 0 auto;
 }
+a {
+  color: inherit; 
+  text-decoration: none; 
+  display: block;
+}
 
+a:hover{
+  background-color: white;
+}
 .skills-container {
   width: 90%;
   margin: 0 auto;
@@ -29,6 +37,10 @@ body {
 
 h4 {
   text-align: center;
+}
+
+h4 > a{
+  padding: 1em;
 }
 .list {
   width: 80%;
@@ -178,6 +190,7 @@ h3 {
 
 .contact li a {
   display: block;
+  text-align: center;
 }
 
 .contact ul{
