--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,39 @@ body {
   margin: 0 auto;
 }
 a {
-  color: inherit; 
-  text-decoration: none; 
+  color: inherit;
+  text-decoration: none;
   display: block;
 }
 
-a:hover{
+.list li {
+  padding: 1em;
+}
+
+.list li {
+  text-align: center;
+  list-style: none;
+}
+
+.skills-container h4{
+  margin-top: 3em;
+}
+
+table {
+  border: 6px dotted lightcoral;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  width: 10%;
+  margin: 0 auto 5%;
+}
+
+.current{
+  text-decoration: underline red 0.1em;
+  
+}
+
+a:hover {
   background-color: white;
 }
 .skills-container {
@@ -39,7 +66,7 @@ h4 {
   text-align: center;
 }
 
-h4 > a{
+h4 > a {
   padding: 1em;
 }
 .list {
@@ -100,7 +127,6 @@ h4 > a{
 .projects {
   margin: 0 auto;
   width: 90%;
-  
 }
 
 .projects h4 {
@@ -110,16 +136,21 @@ h4 > a{
 
 .projects h2 {
   text-align: center;
+  margin-top: 2em;
 }
 
 .nav-container li a:hover {
   background-color: azure;
 }
-
+li.just {
+  text-align: justify;
+  margin-bottom: 0.8em;
+}
 h1 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Nanum Myeongjo", serif;
   text-align: center;
   margin: 2em 0 3em;
+  letter-spacing: 0.09em;
 }
 .dosa-info {
   background-color: darkgray;
@@ -143,7 +174,7 @@ h3 {
   position: absolute;
   width: 400px;
   left: 800px;
-  bottom: 170px;
+  bottom: 80px;
 }
 .samosa-info {
   background-color: aqua;
@@ -193,9 +224,8 @@ h3 {
   text-align: center;
 }
 
-.contact ul{
+.contact ul {
   overflow: hidden;
-
 }
 
 .contact h2 {
@@ -253,7 +283,7 @@ h3 {
 
   h2 {
     text-align: center;
-    margin-top: 2em;
+    font-size: 1.8em;
   }
 
   .page-content {
@@ -270,30 +300,40 @@ h3 {
     text-align: center;
     margin: 1em;
   }
-  .list li{
-    margin-left: 0;
-    width: 95%;
+  .list li {
     text-align: center;
     list-style: none;
   }
 
-  
-  .left, .right, .center{
+  .left,
+  .right,
+  .center {
     float: left;
     width: 33%;
     text-align: center;
   }
 
-  .projects{
+  .projects {
     clear: both;
   }
 
- li.just{
+  li.just {
     text-align: justify;
     margin-bottom: 0.8em;
   }
-li{
-  line-height: 2em;
-}
+  li {
+    line-height: 2em;
+  }
 
+  .contact h2 {
+    margin-top: 18em;
+  }
+
+  .list li {
+    padding: 0;
+  }
+
+  .skills-container h4{
+  margin-top: 0;
+}
 }
