--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: bisque;
+  background-color: #fdeedb;
 }
 .content {
   width: 90%;
@@ -40,6 +40,7 @@ table {
 
 a:hover {
   background-color: white;
+
 }
 .skills-container {
   width: 90%;
@@ -109,10 +110,11 @@ h4 > a {
   margin: 0;
   padding: 0;
   margin: 0 auto;
+  background-color: #A0F7EB;
 }
 .nav-container li {
   width: 100%;
-  background-color: aqua;
+  
   text-align: center;
   box-sizing: content-box;
   margin-bottom: 5%;
@@ -122,6 +124,7 @@ h4 > a {
 .nav-container li a {
   display: block;
   padding: 0.8em 0;
+  color: #D2394E;
 }
 
 .projects {
@@ -140,7 +143,10 @@ h4 > a {
 }
 
 .nav-container li a:hover {
-  background-color: azure;
+  color: #A0F7EB;
+  background-color: #D2394E;
+  text-decoration: none;
+
 }
 li.just {
   text-align: justify;
@@ -252,7 +258,7 @@ h3 {
   .nav-container ul {
     overflow: hidden;
     margin: 0 auto;
-    background-color: aqua;
+    background-color: #A0F7EB;
   }
 
   .nav-container li:nth-child(3) {
