fixing file paths to normalizer and style sheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 body {
   background-color: #fdeedb;
 }
+
+body li a{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .content {
   width: 90%;
   margin: 0 auto;
