--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
   background-color: #fdeedb;
 }
 
-body li a{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+body li a {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .content {
   width: 90%;
@@ -24,7 +24,7 @@ a {
   list-style: none;
 }
 
-.skills-container h4{
+.skills-container h4 {
   margin-top: 3em;
 }
 
@@ -37,14 +37,12 @@ table {
   margin: 0 auto 5%;
 }
 
-.current{
+.current {
   text-decoration: underline red 0.1em;
-  
 }
 
 a:hover {
   background-color: white;
-
 }
 .skills-container {
   width: 90%;
@@ -114,11 +112,11 @@ h4 > a {
   margin: 0;
   padding: 0;
   margin: 0 auto;
-  background-color: #A0F7EB;
+  background-color: #a0f7eb;
 }
 .nav-container li {
   width: 100%;
-  
+
   text-align: center;
   box-sizing: content-box;
   margin-bottom: 5%;
@@ -128,7 +126,7 @@ h4 > a {
 .nav-container li a {
   display: block;
   padding: 0.8em 0;
-  color: #D2394E;
+  color: #d2394e;
 }
 
 .projects {
@@ -147,10 +145,9 @@ h4 > a {
 }
 
 .nav-container li a:hover {
-  color: #A0F7EB;
-  background-color: #D2394E;
+  color: #a0f7eb;
+  background-color: #d2394e;
   text-decoration: none;
-
 }
 li.just {
   text-align: justify;
@@ -262,7 +259,7 @@ h3 {
   .nav-container ul {
     overflow: hidden;
     margin: 0 auto;
-    background-color: #A0F7EB;
+    background-color: #a0f7eb;
   }
 
   .nav-container li:nth-child(3) {
@@ -343,7 +340,7 @@ h3 {
     padding: 0;
   }
 
-  .skills-container h4{
-  margin-top: 0;
-}
+  .skills-container h4 {
+    margin-top: 0;
+  }
 }
